--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -17,10 +17,11 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:navigationIcon="?attr/homeAsUpIndicator"
             app:popupTheme="@style/Theme.FridgeFairy.PopupOverlay" />
-
     </com.google.android.material.appbar.AppBarLayout>
 
+    <!-- Content -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,20 +34,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Clear Purchased Items"
-            android:layout_gravity="end" />
-
-        <!-- Open Receipt Scanner -->
+            android:layout_gravity="end"
+            android:text="Clear Purchased Items" />
 
         <!-- Empty state text -->
-        <Button
-            android:id="@+id/buttonOpenScanner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="Scan Receipt" />
-
         <TextView
             android:id="@+id/textEmptyState"
             android:layout_width="match_parent"
@@ -63,10 +54,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_shopping_list" />
-
     </LinearLayout>
 
-    <!-- Add item FAB -->
+    <!-- NEW: Scan Receipt bottom-left (inline with FAB) -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonOpenScanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="16dp"
+        android:text="Scan Receipt" />
+
+    <!-- Add item FAB bottom-right -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddItem"
         android:layout_width="wrap_content"
