--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -56,7 +56,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@android:drawable/ic_menu_agenda"
-                android:tint="@android:color/darker_gray"
+                app:tint="@android:color/darker_gray"
                 android:layout_marginEnd="4dp"
                 android:contentDescription="Category icon"/>
 
