--- a/app/src/main/res/layout/dialog_add_shopping_item.xml
+++ b/app/src/main/res/layout/dialog_add_shopping_item.xml
@@ -15,15 +15,6 @@
         android:orientation="vertical"
         android:padding="24dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add Shopping Item"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_marginBottom="16dp"/>
-
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,26 +62,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="end">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cancel"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_marginEnd="8dp" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Add"
-                style="@style/Widget.MaterialComponents.Button"
-                app:cornerRadius="24dp"
-                app:backgroundTint="@color/teal_200"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
+            android:gravity="end"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
