--- a/app/src/main/res/layout/dialog_add_food.xml
+++ b/app/src/main/res/layout/dialog_add_food.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/edit_text_food_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Food Name"
+                android:hint="@string/food_name"
                 android:inputType="textCapWords" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -38,7 +38,7 @@
                 android:id="@+id/edit_text_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Category (e.g., Dairy, Produce)"
+                android:hint="@string/category"
                 android:inputType="textCapWords" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -52,7 +52,7 @@
                 android:id="@+id/edit_text_quantity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Quantity"
+                android:hint="@string/quantity"
                 android:inputType="number"
                 android:text="1" />
 
